force-app/main/default/objects/nepa_decision_element__c/fields/nepa_sme_validation_date__c.field-meta.xml
<CustomField>
<fullName>nepa_sme_validation_date__c</fullName>
        <description>Date and time when a subject matter expert validated this AI-assisted decision element. Required when nepa_ai_assisted_draft__c = true and Selected__c = true. Provides the administrative record audit trail showing human review occurred before the AI-generated content was adopted into the NEPA decision. Citation: OMB M-25-21 Section 4(b).</description>
        <inlineHelpText>Date/time SME validated this AI-assisted content. Required for selected AI-drafted elements.</inlineHelpText>
        <label>SME Validation Date</label>
        <type>DateTime</type>
</CustomField>